# oricad

./: CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md
.github/: CODE_OF_CONDUCT.md  FUNDING.yml
cmake/: oricadVersionDetails.cmake
src/: CMakeLists.txt  oricad_version.cpp.in  oricad_version.h
